--- a/style.css
+++ b/style.css
@@ -1,3 +1,38 @@
+* {
+  font-family: Helvetica;
+}
+
 h1 {
-  color: yellow;
+  font-size: 100px;
+  font-weight: bold;
+  color: khaki;
+  text-align: center;
+  background-image: url("../../resources/images/banner.webp");
+}
+
+img {
+  height: 250px;
+  width: 250px;
+}
+
+span {
+  color: blue;
+}
+
+.sectiontitle {
+  font-size: 32px;
+  font-weight: bold;
+  color: white;
+}
+
+#brushes {
+  background-color: mediumspringgreen;
+}
+
+#frames {
+  background-color: lightcoral;
+}
+
+#paint {
+  background-color: skyblue;
 }
