--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ h1 {
   font-weight: bold;
   color: khaki;
   text-align: center;
-  background-image: url("../../resources/images/banner.webp");
+  background-image: url("./banner.webp");
 }
 
 img {
